feat: curriculum entity 수정
영역 대체 과목 필요에 따른 코드 수정